Hotfix to shell project

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# List of Collaborators in this project
+#This repository is contrubuted by
 
-Ayeni Favour
-Onyejeme Emmanuel
+   Maureen Oguche <career.oguchemaureen@outlook.com>
+    Cally Nweke  <nwekechidimma88@gmail.com>
