--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 #This repository is contrubuted by
 
-   Maureen Oguche <career.oguchemaureen@outlook.com>
-    Cally Nweke  <nwekechidimma88@gmail.com>
+   Ayeni Favour <ayenifavour203@gmail.com>
+   Onyejeme Emmanuel  <onyejemeemmanuel65@gmail.com>
